@@ -50,7 +50,7 @@ public class SplitWinnings extends MiniGameWrapper {
 				"banks as high as possible by picking cash values and multipliers "
 				+ "from two %d-space boards.", MAX_STAGES, BOARD_SIZE));
         output.add(String.format("The first board has cash values ranging from $%,d to $%,d, and three bombs.",
-				applyBaseMultiplier(BASE_CASH.get(0)), applyBaseMultiplier(BASE_CASH.get(BOARD_SIZE-(numBombsLeft[0]+1)))));
+				applyBaseMultiplier(BASE_CASH.getFirst()), applyBaseMultiplier(BASE_CASH.get(BOARD_SIZE-(numBombsLeft[0]+1)))));
         output.add("The second board has cash multipliers ranging from 1.5x to 5x, and four bombs.");
         output.add("You can mix and match freely between both boards, and type STOP once you are satisfied with your total. "
         		+ "Stopping will secure your bank, then your next bank will start over at $0.");
